# fastapi-hml

./: .gitignore  README.md  data.py  pyproject.toml
fastapi-hml/: main.py
fastapi_hml/: main.py
fastapi_hml/database/: data.py  models.py
fastapi_hml/models/: models.py
tests/: tests.py
