[tool.poetry]
name = "fastapi-hml"
version = "0.1.0"
description = ""
authors = ["gabrielsrochaa <gabriel.srocha97@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_hml"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.101.1"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
